--- a/style.css
+++ b/style.css
@@ -5,12 +5,23 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
+h1,
+h2,
+p {
   color: #fff;
 }
 
 body {
   background-color: #111;
+}
+
+a {
+  text-decoration: none;
+  color: #00bd3f;
+}
+
+a:hover {
+  transform: scale(1.2);
 }
 
 img {
@@ -21,11 +32,13 @@ img {
 }
 
 input {
+  background-color: #181a1b;
   padding: 10px;
   margin: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #2e2b2b;
   border-radius: 5px;
   font-size: 16px;
+  color: #00bd3f;
 }
 
 input:focus {
@@ -52,7 +65,7 @@ button {
   padding: 10px;
   margin: 10px;
   box-shadow: 0 2px 4px rgba(0, 255, 64, 0.7);
-  background-color: #fff;
+  background-color: #1e2122;
   max-width: 220px;
 }
 
@@ -68,4 +81,12 @@ button {
   display: flex;
   margin: 2em;
   flex-wrap: wrap;
+}
+
+.btnEditar {
+  background-color: rgba(0, 118, 187, 0.867);
+}
+
+.btnExcluir {
+  background-color: rgba(255, 0, 0, 0.867);
 }
