--- a/style.css
+++ b/style.css
@@ -90,3 +90,26 @@ button {
 .btnExcluir {
   background-color: rgba(255, 0, 0, 0.867);
 }
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: none;
+    scrollbar-color: #00bd3f #000000;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 14px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #000000;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #00bd3f;
+    border-radius: 10px;
+    border: 3px none #000000;
+  }
